package keijumt.design_pattern.pattern.mediator

interface Colleague {
    fun getTag(): String
    fun run()
}